# workshop-gcp-intent-to-agents

./: README.md
adk-agent/: Dockerfile  load_test.py  pyproject.toml  server.py
adk-agent/intent_agent/: agent.py
